<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Farmer.Farmer_login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log-in"
        android:textSize="50dp"
        android:textColor="@color/signin"
        android:layout_gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="3"
        android:shadowDy="5"
        android:shadowRadius="1.5"
        android:padding="50dp"/>

    <TextView
        android:id="@+id/textfname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:text="@string/textmob"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/fname"
        android:padding="10dp"
        android:backgroundTint="@color/editline"
        android:drawableRight="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editunamee"
        android:inputType="number"/>

    <TextView
        android:id="@+id/textfpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:text="@string/textpass"
        android:textSize="18dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/fpass"
        android:padding="10dp"
        android:backgroundTint="@color/editline"
        android:drawableRight="@drawable/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editpass"
        android:layout_marginBottom="50dp"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/fsign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/logbtn"
        android:textSize="20dp"
        android:textColor="@color/btext"
        android:background="@drawable/btndraw"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Are you new User? then click"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/signin"/>

</LinearLayout>